; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_set_test_title.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_set_test_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_title = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_test_title(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32*, i32** @test_title, align 8
  %4 = call i32 @free(i32* %3)
  %5 = load i8*, i8** %2, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32* @strdup(i8* %9)
  br label %11

11:                                               ; preds = %8, %7
  %12 = phi i32* [ null, %7 ], [ %10, %8 ]
  store i32* %12, i32** @test_title, align 8
  ret void
}

declare dso_local i32 @free(i32*) #1

declare dso_local i32* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
